android/app/.cxx/Debug/36146f6x/arm64-v8a/android_gradle_build_stdout_androidEntry_arm64-v8a.txt
ninja: Entering directory `/Users/natemac/Downloads/jammates-miniaudio-nao 2/android/app/.cxx/Debug/36146f6x/arm64-v8a'
[1/2] Building C object CMakeFiles/androidEntry.dir/src/main/cpp/main.c.o
FAILED: CMakeFiles/androidEntry.dir/src/main/cpp/main.c.o 
/Users/natemac/Library/Android/sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang --target=aarch64-none-linux-android21 --gcc-toolchain=/Users/natemac/Library/Android/sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/natemac/Library/Android/sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -DPLATFORM_ANDROID -DSUPPORT_MODULE_RAUDIO -DandroidEntry_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/androidEntry.dir/src/main/cpp/main.c.o -MF CMakeFiles/androidEntry.dir/src/main/cpp/main.c.o.d -o CMakeFiles/androidEntry.dir/src/main/cpp/main.c.o -c ../../../../src/main/cpp/main.c
In file included from ../../../../src/main/cpp/main.c:4:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.c:1:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.h:21:
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../external/utilities/Android/utils.c:213:16: error: redefinition of 'LoadFileData'
unsigned char *LoadFileData(const char *fileName, unsigned int *bytesRead)
               ^
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../raudio.c:2606:23: note: previous definition is here
static unsigned char *LoadFileData(const char *fileName, unsigned int *bytesRead)
                      ^
In file included from ../../../../src/main/cpp/main.c:4:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.c:1:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.h:21:
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../external/utilities/Android/utils.c:268:6: error: redefinition of 'SaveFileData'
bool SaveFileData(const char *fileName, void *data, unsigned int bytesToWrite)
     ^
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../raudio.c:2646:13: note: previous definition is here
static bool SaveFileData(const char *fileName, void *data, unsigned int bytesToWrite)
            ^
In file included from ../../../../src/main/cpp/main.c:4:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.c:1:
In file included from ../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/androidAPI.h:21:
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../external/utilities/Android/utils.c:407:6: error: redefinition of 'SaveFileText'
bool SaveFileText(const char *fileName, char *text)
     ^
../../../../src/main/cpp/../../../../../miniaudio/AndroidAPI/../raudio.c:2670:13: note: previous definition is here
static bool SaveFileText(const char *fileName, char *text)
            ^
3 errors generated.
ninja: build stopped: subcommand failed.
